# cuckoo_time_translator

./: LICENSE  README.md  dependencies.rosinstall
cuckoo_time_translation_algorithms/: CMakeLists.txt  package.xml
cuckoo_time_translation_algorithms/include/cuckoo_time_translator/: AbstractAssert.h  ConvexHull.h  ConvexHullOwt.h  KalmanOwt.h  OneWayTranslator.h  SwitchingOwt.h  Time.h  TimestampUnwrapper.h
cuckoo_time_translation_algorithms/src/: ConvexHullOwt.cpp  KalmanOwt.cpp  OneWayTranslator.cpp  SwitchingOwt.cpp  TimestampUnwrapper.cpp
cuckoo_time_translation_algorithms/test/: TestOneWayTranslators.cpp  TestTimestampUnwrapper.cpp
cuckoo_time_translator/: CMakeLists.txt  package.xml
cuckoo_time_translator/cfg/: DeviceTimeTranslator.cfg  MockCuckooClock.cfg
cuckoo_time_translator/include/cuckoo_time_translator/: DeviceTimeTranslator.h  OwtFactory.h
cuckoo_time_translator/msg/: DeviceTimestamp.msg
cuckoo_time_translator/src/: DeviceTimeTranslator.cpp  MockCuckooClock.cpp  MockCuckooClock.h  MockCuckooDeviceDriver.cpp  MockCuckooDeviceDriver.h  OwtFactory.cpp  RosConsoleBridgeActivator.cpp
cuckoo_time_translator/test/: TestDefaults.cpp  TestDeviceTimeTranslator.cpp  TestDeviceTimeTranslatorNode.cpp  device_time_translator.test  test_main.cpp  units.test
cuckoo_time_translator_algorithms/: CMakeLists.txt  package.xml
cuckoo_time_translator_algorithms/include/cuckoo_time_translator/: AbstractAssert.h  ClockParameters.h  ConvexHullImpl.h  ConvexHullOwt.h  KalmanOwt.h  Logging.h  OneWayTranslator.h  SwitchingOwt.h  Time.h  TimestampUnwrapper.h
cuckoo_time_translator_algorithms/src/: ConvexHullOwt.cpp  KalmanOwt.cpp  OneWayTranslator.cpp  SwitchingOwt.cpp  TimestampUnwrapper.cpp
cuckoo_time_translator_algorithms/test/: TestTimestampUnwrapper.cpp
cuckoo_time_translator_msgs/: CMakeLists.txt  package.xml
cuckoo_time_translator_msgs/msg/: DeviceTimestamp.msg
cuckoo_time_translator_python/: CMakeLists.txt  dependencies.rosinstall  package.xml  setup.py
cuckoo_time_translator_python/python/cuckoo_time_translator/: __init__.py  algorithms.py  baseline.py  batch_algo.py  device_time_bags.py  plotting.py  timestamp_filters.py  timestamp_owts.py  timestamp_series.py  tools.py
cuckoo_time_translator_python/python/cuckoo_time_translator_python/: batch_algo.py  device_time_bags.py  plotting.py  timestamp_owts.py  tools.py
cuckoo_time_translator_python/scripts/: ctt_introspect.py
cuckoo_time_translator_python/src/: module.cpp
cuckoo_time_translator_python/test/: Test.py
