<?xml version="1.0"?>
<package format="2">
  <name>cuckoo_time_translator</name>
  <version>0.0.1</version>
  <description>This library intends to do most of the dirty work required within a device driver that emoploys one way device time translation.
  This includes:
  * handling the one way translator
  * sending special timing messages (DeviceTimestamp) for debugging and evaluation (e.g. with ctt_introspect in the cuckoo_time_translator_python package)
  * provide dynamic confiugration for the one way translation algorithm
   </description>

  <author email="hannes.sommer@mavt.ethz.ch">Hannes Sommer</author>
  <maintainer email="hannes.sommer@mavt.ethz.ch">Hannes Sommer</maintainer>
  <license>New BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>driver_base</depend>
  <depend>dynamic_reconfigure</depend>

  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>cuckoo_time_translator_algorithms</depend>
  <depend>rosconsole_bridge</depend>

  <test_depend>rostest</test_depend>
</package>
